<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUp"
    >

    <ImageView
        android:id="@+id/side_ellipse_sign_up"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/already_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/side_ellipse"
        tools:ignore="MissingConstraints,ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/main_image_sign_up"
        android:layout_width="190dp"
        android:layout_height="127dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@drawable/sign_up_main_image" />

    <TextView
        android:id="@+id/Title_sign_up"
        android:layout_width="254dp"
        android:layout_height="31dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_to_stoxact"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/full_name"
        android:layout_width="273sp"
        android:layout_height="48dp"
        android:autofillHints="Muneer"
        android:background="@drawable/text_field"
        android:elevation="3sp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_name"
        android:inputType="none|textPersonName|textAutoComplete|textEmailAddress"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textAlignment="center"
        android:textColor="#615E5E"
        android:textColorHint="#5C000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:imeOptions="actionNext"
        />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="273sp"
        android:layout_height="48sp"
        android:autofillHints=""
        android:background="@drawable/text_field"
        android:elevation="3dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_email"
        android:inputType="textAutoComplete|textEmailAddress"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textAlignment="center"
        android:textColor="#615E5E"
        android:textColorHint="#5C000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        android:imeOptions="actionNext"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/password"
        android:layout_width="273sp"
        android:layout_height="48sp"
        android:autofillHints=""
        android:background="@drawable/text_field"
        android:elevation="3dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textAlignment="center"
        android:textColor="#615E5E"
        android:textColorHint="#5C000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        android:imeOptions="actionNext"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/password_confirm"
        android:layout_width="273sp"
        android:layout_height="48sp"
        android:autofillHints="Muneer"
        android:background="@drawable/text_field"
        android:elevation="3dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textAlignment="center"
        android:textColor="#615E5E"
        android:textColorHint="#5C000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633"
        android:imeOptions="actionDone"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="270sp"
        android:layout_height="48sp"
        android:background="@drawable/custom_btn"
        android:elevation="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onClickRegister"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/or_divider"
        android:layout_width="21sp"
        android:layout_height="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/or"
        android:textColor="#757171"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/google_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/divider1"
        android:layout_width="146dp"
        android:layout_height="5dp"
        android:src="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/google_signup"
        app:layout_constraintEnd_toStartOf="@+id/or_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.542" />

    <ImageView
        android:id="@+id/divider2"
        android:layout_width="146dp"
        android:layout_height="5dp"
        android:src="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/google_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/or_divider"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/google_signup"
        android:layout_width="273sp"
        android:layout_height="48dp"
        android:background="@drawable/auth_btn"
        android:drawableStart="@drawable/google_logo"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onClickGoogleSignup"
        android:paddingStart="10sp"
        android:text="@string/sign_up_with_google"
        android:textAlignment="center"
        android:textColor="#15929A"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.445"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/already_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/already_have_an_account"
        android:textColor="#757171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_signup"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onClick_login"
        android:text="@string/log_in"
        android:textColor="#15929A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/already_acc"
        app:layout_constraintTop_toBottomOf="@+id/google_signup"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>