<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_img_login"
        android:layout_width="187dp"
        android:layout_height="147dp"
        android:contentDescription="@string/image"
        android:src="@drawable/login_main_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/dont_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/dont_have_an_account"
        android:textColor="#757171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_login"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/signup_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onClick_signup"
        android:text="@string/sign_up"
        android:textColor="#15929A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/dont_acc"
        app:layout_constraintTop_toBottomOf="@+id/google_login"
        app:layout_constraintVertical_bias="0.507"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/google_login"
        android:layout_width="273sp"
        android:layout_height="48dp"
        android:background="@drawable/auth_btn"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/google_logo"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onClickGoogleLogin"
        android:paddingStart="10sp"
        android:paddingEnd="0sp"
        android:text="@string/login_with_google"
        android:textAlignment="center"
        android:textColor="#15929A"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.445" />
    <ImageView
        android:id="@+id/divider"
        android:layout_width="146dp"
        android:layout_height="5dp"
        android:contentDescription="@string/image"
        android:src="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/google_login"
        app:layout_constraintEnd_toStartOf="@+id/or_divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.542" />



    <ImageView
        android:id="@+id/divider3"
        android:layout_width="146dp"
        android:layout_height="5dp"
        android:src="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/or_divider2"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.542"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/or_divider2"
        android:layout_width="21sp"
        android:layout_height="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/or"
        android:textColor="#757171"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="270sp"
        android:layout_height="48sp"
        android:background="@drawable/custom_btn"
        android:elevation="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onClick_login_btn"
        android:text="@string/login_btn"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/email_login"
        android:imeOptions="actionNext"
        android:layout_width="273sp"
        android:layout_height="48sp"
        android:autofillHints=""
        android:background="@drawable/text_field"
        android:elevation="3dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_email"
        android:inputType="textAutoComplete|textEmailAddress"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textAlignment="center"
        android:textColor="#615E5E"
        android:textColorHint="#5C000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/password_login"
        android:layout_width="273sp"
        android:layout_height="48sp"
        android:imeOptions="actionDone"
        android:autofillHints=""
        android:background="@drawable/text_field"
        android:elevation="3dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textAlignment="center"
        android:textColor="#615E5E"
        android:textColorHint="#5C000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Title_login"
        android:layout_width="254dp"
        android:layout_height="31dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_to_stoxact"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/side_ellipse_login"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/dont_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/side_ellipse"
        tools:ignore="MissingConstraints,ImageContrastCheck,VisualLintBounds" />
</androidx.constraintlayout.widget.ConstraintLayout>